# serializer version: 1
# name: test_cascades_backups_without_overwriting_newer_files
  dict({
    'rotating.log': 'rotate [INFO] fourth message',
    'rotating.log.1': 'rotate [INFO] third message',
    'rotating.log.2': 'rotate [INFO] second message',
  })
# ---
# name: test_falls_back_to_append_when_reopening_a_rotated_file_fails
  dict({
    'rotating.log': 'rotate [INFO] second message',
    'rotating.log.1': 'rotate [INFO] first message',
  })
# ---
# name: test_leaves_logs_intact_when_rotation_is_disabled
  dict({
    'rotating.log': '''
      rotate [INFO] first message
      rotate [INFO] second message
    ''',
  })
# ---
# name: test_respects_multibyte_characters_when_evaluating_record_sizes
  dict({
    'rotating.log': 'rotate [INFO] emoji 😁',
    'rotating.log.1': 'rotate [INFO] emoji 😀',
  })
# ---
# name: test_rotates_when_a_single_record_exceeds_the_byte_budget
  dict({
    'rotating.log': 'rotate [INFO] overlong message',
    'rotating.log.1': '',
  })
# ---
# name: test_rotates_when_the_next_record_exceeds_the_byte_budget
  dict({
    'rotating.log': 'rotate [INFO] second message',
    'rotating.log.1': 'rotate [INFO] first message',
  })
# ---
